# bl616-tmpl

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flash_prog_config.ini  main.c  rv32imafc_xthead-clang-toolchain.cmake  rv32imafc_xtheade-toolchain.cmake
app/: CMakeLists.txt  cdc_acm_template.c  cdc_acm_template.h  flash_prog_config.ini.in  main.c
bsp/board/: CMakeLists.txt
bsp/board/bl616dk/: CMakeLists.txt  bl616_flash.ld  bl616_ram.ld  board.c  fw_header.h
bsp/common/: CMakeLists.txt
bsp/common/audio/: CMakeLists.txt
bsp/common/ethernet/: CMakeLists.txt
bsp/common/image_sensor/: CMakeLists.txt
bsp/common/lcd/: CMakeLists.txt
bsp/common/sdcard/: CMakeLists.txt
bsp/common/touch/: CMakeLists.txt
cmake/: bflb_flash.cmake  rv32imafc_xthead-clang-toolchain.cmake  rv32imafc_xtheade-toolchain.cmake
components/: CMakeLists.txt
components/ai/TinyMaix/src/: arch_arm_simd.h  arch_rv32p.h  arch_rv64v.h
components/crypto/: CMakeLists.txt
components/easyflash4/: CMakeLists.txt
components/fs/: CMakeLists.txt
components/fs/fatfs/: CMakeLists.txt
components/fs/fatfs/port/: fatfs_usbh.c
components/fs/littlefs/: CMakeLists.txt
components/fs/romfs/: CMakeLists.txt
components/graphics/: CMakeLists.txt
components/graphics/lvgl/: CMakeLists.txt
components/libc/: CMakeLists.txt  printf.c
components/libc/nuttx/libc/string/: lib_strtok.c
components/lzma/: CMakeLists.txt
components/lzma/xz/: CMakeLists.txt
components/mm/: CMakeLists.txt
components/mm/tlsf/: tlsf.c
components/multimedia/pvmp3dec/include/pvmp3dec/: pv_mp3dec_fxd_op_arm_gcc.h  pvmp3_normalize.h
components/multimedia/speexdsp/include/speex/: fixed_arm4.h  fixed_arm5e.h  resample_neon.h
components/net/: CMakeLists.txt
components/net/lib/: CMakeLists.txt
components/os/: CMakeLists.txt
components/os/freertos/: tasks.c
components/os/freertos/freertos_helper/: ps_extend.c
components/os/freertos/portable/GCC/RISC-V/: portStatTrap.c
components/usb/: CMakeLists.txt
components/usb/cherryusb/: CMakeLists.txt
components/usb/cherryusb/osal/: usb_osal.h
components/utils/: CMakeLists.txt
components/utils/coredump/: bflb_coredump.c
components/utils/log/: bflb_dbg.h  log.h
components/wireless/bluetooth/blestack/src/common/include/toolchain/: gcc.h
components/wireless/wifi6/bl6_os_adapter/src/: platform_bouffalo_sdk.c  rtos_al.c
drivers/: CMakeLists.txt
drivers/lhal/: CMakeLists.txt
drivers/lhal/include/: bflb_rtc.h
drivers/lhal/include/arch/risc-v/: csr.h
drivers/lhal/include/arch/risc-v/t-head/: rv_syscall.h
drivers/lhal/include/arch/risc-v/t-head/Core/Include/: csi_rv32_gcc.h  csi_rv64_gcc.h
drivers/lhal/include/arch/risc-v/t-head/csi_dsp/include/: csi_math.h
drivers/lhal/include/compiler/: compiler_gcc.h
drivers/lhal/src/: bflb_irq.c  bflb_rtc.c  bflb_usb_v2.c
drivers/rfparam/: CMakeLists.txt
drivers/rfparam/Src/: rfparam_adapter.c
drivers/soc/: CMakeLists.txt
drivers/soc/bl616/: CMakeLists.txt
drivers/soc/bl616/phyrf/: CMakeLists.txt
drivers/soc/bl616/std/: CMakeLists.txt
drivers/soc/bl616/std/include/: bl616_mfg_efuse.h
drivers/soc/bl616/std/src/: bl616_mfg_flash.c  bl616_pm.c  bl616_romapi_e907.c
tools/bflb_tools/bouffalo_flash_cube/: .gitignore  config.toml
tools/bflb_tools/bouffalo_flash_cube/chips/bl616/img_create/: whole_flash_data.bin.hash
