if (CONFIG_USB_DEVICE OR CONFIG_USB_HOST)
    add_subdirectory(usb)
endif()
if (CONFIG_MBEDTLS)
    add_subdirectory(crypto)
endif()
if (CONFIG_FS)
    add_subdirectory(fs)
endif()
if (CONFIG_GRAPHICS)
    add_subdirectory(graphics)
endif()
if (CONFIG_LZMA)
    add_subdirectory(lzma)
endif()
if (CONFIG_NET)
    add_subdirectory(net)
endif()

add_subdirectory(libc)
add_subdirectory(mm)
# add_subdirectory(os)

add_subdirectory(utils)
# add_subdirectory(wireless)
