
if (CONFIG_USB_HOST)
    add_library(cherryusb STATIC core/usbh_core.c)
    if (CONFIG_CHERRYUSB_HOST_HUB)
        target_sources(cherryusb PRIVATE class/hub/usbh_hub.c )
        target_include_directories(cherryusb PUBLIC class/hub osal)
    endif()
    if (CONFIG_CHERRYUSB_HOST_EHCI)
        target_sources(cherryusb PRIVATE port/ehci/usb_hc_ehci.c)
        target_include_directories(cherryusb PUBLIC port/ehci)
    endif()
    if(CONFIG_CHERRYUSB_HOST_CDC_ACM)
        target_include_directories(cherryusb PUBLIC class/cdc)
        target_sources(cherryusb PRIVATE class/cdc/usbh_cdc_acm.c)
    endif()
    if(CONFIG_CHERRYUSB_HOST_HID)
        target_include_directories(cherryusb PUBLIC class/hid)
        target_sources(cherryusb PRIVATE class/hid/usbh_hid.c)
    endif()
    if(CONFIG_CHERRYUSB_HOST_MSC)
        target_include_directories(cherryusb PUBLIC class/msc)
        target_sources(cherryusb PRIVATE class/msc/usbh_msc.c)
    endif()
    if(CONFIG_CHERRYUSB_HOST_AUDIO)
        target_include_directories(cherryusb PUBLIC class/audio)
        target_sources(cherryusb PRIVATE class/audio/usbh_audio.c)
    endif()
    if(CONFIG_CHERRYUSB_DEVICE_VIDEO)
        target_include_directories(cherryusb PUBLIC class/video)
        target_sources(cherryusb PRIVATE class/video/usbh_video.c)
    endif()

else()
    add_library(cherryusb STATIC core/usbd_core.c)
    if(CONFIG_CHERRYUSB_DEVICE_CDC)
        target_include_directories(cherryusb PUBLIC class/cdc)
        target_sources(cherryusb PRIVATE class/cdc/usbd_cdc.c)
    endif()
    if(CONFIG_CHERRYUSB_DEVICE_HID)
        target_include_directories(cherryusb PUBLIC class/hid)
        target_sources(cherryusb PRIVATE class/hid/usbd_hid.c)
    endif()
    if(CONFIG_CHERRYUSB_DEVICE_MSC)
        target_include_directories(cherryusb PUBLIC class/msc)
        target_sources(cherryusb PRIVATE class/msc/usbd_msc.c)
    endif()
    if(CONFIG_CHERRYUSB_DEVICE_AUDIO)
        target_include_directories(cherryusb PUBLIC class/audio)
        target_sources(cherryusb PRIVATE class/audio/usbd_audio.c)
    endif()
    if(CONFIG_CHERRYUSB_DEVICE_VIDEO)
        target_include_directories(cherryusb PUBLIC class/video)
        target_sources(cherryusb PRIVATE class/video/usbd_video.c)
    endif()
endif()

target_include_directories(cherryusb PUBLIC
    common
    core
)

target_compile_definitions(cherryusb PUBLIC CONFIG_CHERRYUSB CONFIG_USB_ALIGN_SIZE=32 CONFIG_USB_HS)


